--- a/dummy-site/app/components/Footer.module.css
+++ b/dummy-site/app/components/Footer.module.css
@@ -56,7 +56,7 @@
 
 /* Copyright and legal information */
 .footerBottom {
-  border-top: 1px solid var(--warm-gray);
+  border-top: 2px solid gray;
   padding: 1.5rem 2rem;
   text-align: center;
 }
